--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "nodemailer": "^1.3.4",
     "nodemailer-smtp-transport": "^1.0.2",
     "restify": "^3.0.2",
-    "rpi-gpio": "^0.5.1"
+    "rpi-gpio": "^0.5.1",
+    "winston": "^1.0.0"
   }
 }
